force-app/main/default/objects/Twilio_Segment_Event__mdt/Twilio_Segment_Event__mdt.object-meta.xml
<CustomObject>
    <label>Twilio Segment Event</label>
    <pluralLabel>Twilio Segment Events</pluralLabel>
</CustomObject>