force-app/main/default/objects/Twilio_Segment_Event__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>Represents a visual element that provides context and enhances usability.</description>
    <inlineHelpText>https://developer.salesforce.com/docs/component-library/bundle/lightning:icon/example</inlineHelpText>
    <label>Icon</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>