force-app/main/default/objects/Twilio_Segment_Event__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this filtering active?</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>