force-app/main/default/objects/Twilio_Segment_Event__mdt/fields/isVisible__c.field-meta.xml
<CustomField>
    <fullName>isVisible__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should this event be visible?</inlineHelpText>
    <label>isVisible</label>
    <type>Checkbox</type>
</CustomField>